# hyperion

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitremotes  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  Pipfile  README.md  README.rst  beam_off_trickery.sh  codecov.yml  conftest.py  contributing.md  cov.xml  deploy_artemis.py  dls_dev_env.sh  dls_new_environment.sh  external_param_test.json  gridscan_playing.py  live_test_rotation_params.json  live_test_rotation_params_move_xyz.json  make_switcher.py  manual_grid_detect_then_xray_center.json  ophyd.txt  panda_test_parameters.json  plan_names.yml  pull_request_template.md  pyproject.toml  run_artemis.sh  run_hyperion.sh  run_in_podman.sh  setup.cfg  setup_graylog.sh  setup_metrics.sh  start_artemis.sh  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/verify-nexus/: Dockerfile  action.yml  entrypoint.sh
.github/pages/: make_switcher.py
.github/workflows/: add_assignee_when_pr_opened.yml  assigned_issues_to_in_progress.yml  code.yml  container_tests.sh  docs.yml  get_issue_from_pr.yml  get_project_data.yml  get_project_data_and_move_column.yml  linkcheck.yml  open_prs_to_review.yml  opened_issues_to_backlog.yml  pin_versions.py  pre_release_workflow.yml  publish_docker_image.yml  rework_prs_to_in_progress.yml  strip_pin_on_merge_to_main.yml  test_assignee.yml  test_pin_versions.py
.github/workflows/test_data/: pip_freeze.txt  setup.cfg  setup.cfg.pinned  setup.cfg.unpinned
.oldgithub/workflows/: code.yml
deploy/: deploy_artemis.py  deploy_artemis.sh  deploy_hyperion.py
device_soft_config/panda/: panda-gridscan.yaml
docs/: conf.py  deploying.md  param_hierarchy.puml  reference.rst
docs/explanations/: why-is-something-so.rst
docs/how-to/: accomplish-a-task.rst
docs/reference/: api.rst
docs/tutorials/: installation.rst
fake_zocalo/: README.rst  __main__.py  dls_start_fake_zocalo.sh
graylog/: Dockerfile  tcp_input.json
helmchart/: Chart.yaml  values.yaml
helmchart/templates/: deployment.yaml  service.yaml
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/.doctrees/: environment.pickle  genindex.doctree  index.doctree
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/.doctrees/developer/: index.doctree
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/.doctrees/user/: index.doctree
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/_sources/: index.rst.txt
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/_sources/developer/: index.rst.txt
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/_sources/user/: index.rst.txt
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/_static/: documentation_options.js
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/developer/: index.html
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/developer/explanations/: decisions.html
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/developer/how-to/: build-docs.html  contribute.html  lint.html  make-release.html  move-code.html  run-tests.html  static-analysis.html  update-tools.html
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/developer/reference/: standards.html
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/developer/tutorials/: dev-install.html
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/user/: index.html
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/user/explanations/: docs-structure.html
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/user/how-to/: run-container.html
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/user/reference/: api.html
hyperion_986_set_energy_apply_lookup_table_value_for_pitch_roll/user/tutorials/: get_started.html  installation.html
metrics/: Dockerfile  prometheus.yml
src/: __init__.py  panda_test_parameters.json
src/artemis/: DCM_pitch_scan.py  Fluorescence_Spectra.py  Flux.py  OAV.py  RobotPinCheck.py  UDC_move.to.default_state.py  UDC_move.to.robot.load.py  UDC_move_to_default_state.py  UDC_move_to_robot_load.py  __init__.py  __main__.py  _version_git.py  beam_topup_plan.py  conftest.py  fast_grid_scan_plan.py  fgs_communicator.py  fgs_recommender.py  flux_parameters.py  flux_plan.py  log.py  main.py  move_det_robot_load.py  parameters.py  plan_names.py  snapshot_plan.py  testing_plan.py  topup_parameters.py  tracing.py  tutorial_scan.py  utils.py  zocalo_interaction.py
src/artemis/device_setup_plans/: manipulate_sample.py  oav_centring_plan.py  read_hardware_for_setup.py  setup_oav.py  setup_zebra.py  utils.py  (+4 more)
src/hyperion/: __main__.py  conftest.py  exceptions.py  log.py  snapshot_plan.py  tracing.py
src/python_artemis/: __main__.py  hello.py
tests/: conftest.py  test_main_system.py  test_python_artemis.py  test_zocalo_interaction.py
tests/parameter_json_files/: live_test_rotation_params.json  live_test_rotation_params_move_xyz.json  test_parameter_defaults.json
tests/test_data/: flyscan_pcap_ignore_seq.yaml  good_test_parameters.json  good_test_rotation_scan_parameters.json  hyperion_parameters.json  i04_beamlineParameters  ins_8_5.nxs  test_OAVCentring.json  test_beamline_dcm_pitch_converter.txt  test_beamline_dcm_roll_converter.txt  test_beamline_dcm_roll_converter_reversed.txt  test_beamline_parameters.txt  test_beamline_vfm_lat_converter.txt  test_config.cfg  test_det_dist_converter.txt  test_mirror_focus.json
tests/unit_tests/: conftest.py  test_exceptions.py
utility_scripts/: build_docker_image.sh  build_imginfo.sh  dev_jaeger_container.sh  dls_dev_env.sh  run_imginfo.sh  setup_graylog.sh  strip_metafile.py
utility_scripts/deploy/: create_venv.py  deploy_hyperion.py  deploy_to_k8s.sh  test_deploy.py
utility_scripts/docker/: entrypoint.sh  healthcheck.sh  i03-compose.yml
(+657 files in other folders)
