[build-system]
requires = ["setuptools<57", "wheel==0.33.1"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "s03: marks tests as requiring the s03 simulator running (deselect with '-m \"not s03\"')",
]
addopts = "--cov=src/artemis --cov-report term --cov-report xml:cov.xml"
testpaths = "src"
