[metadata]
name = hyperion
description = Unattended MX data collection using BlueSky / Ophyd
url = https://github.com/DiamondLightSource/hyperion
license = BSD 3-Clause License
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.11
packages = find:
package_dir =
    =src
install_requires =
    bluesky
    pyepics
    blueapi
    flask-restful
    ispyb
    scanspec
    numpy
    nexgen>=0.9.1
    opentelemetry-distro
    opentelemetry-exporter-jaeger
    ophyd
    semver
    # For databroker
    humanize
    pandas
    xarray
    doct
    databroker
    dls-dodal @ git+https://github.com/DiamondLightSource/dodal.git@aac89a96686218add67bbbcc80118f6e94f0bdc9
    pydantic<2.0 # See https://github.com/DiamondLightSource/hyperion/issues/774
    scipy
    pyzmq<25 # See https://github.com/DiamondLightSource/hyperion/issues/1103

[options.entry_points]
console_scripts =
    hyperion = hyperion.__main__:main
    hyperion-callbacks = hyperion.external_interaction.callbacks.__main__:main

[options.extras_require]
dev =
    GitPython
    black
    pytest-cov
    pytest-random-order
    pytest-asyncio
    ipython
    mockito
    pre-commit
    mypy
    matplotlib
    tox
    build
    ruff
    diff-cover
    pyright
    pyright_diff_quality_plugin @ git+https://github.com/DiamondLightSource/pyright_diff_quality_plugin.git


[options.packages.find]
where = src

[options.package_data]
hyperion = *.txt

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True
#needed for opentelemetry
namespace_packages = true
[mypy-opentelemetry.sdk.*]
implicit_reexport = True
