[metadata]
name = hyperion
description = Unattended MX data collection using BlueSky / Ophyd
url = https://github.com/DiamondLightSource/hyperion
license = BSD 3-Clause License
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.11
packages = find:
package_dir =
    =src
install_requires =
    #
    # If a constraint is not set here or if the dependency is pinned to a hash
    # it will be auto-pinned to the latest release version by the pre-release workflow   
    #
    flask-restful == 0.3.10
    opentelemetry-distro == 0.45b0
    opentelemetry-exporter-jaeger == 1.21.0
    semver == 3.0.2
    # For databroker
    humanize == 4.9.0
    pandas == 2.2.2
    xarray == 2024.5.0
    doct == 1.1.0
    databroker == 1.2.5
    pydantic == 1.10.15 # See https://github.com/DiamondLightSource/hyperion/issues/774
    scipy == 1.13.0
    pyzmq == 26.0.3
    scanspec == 0.6.6
    numpy == 1.26.4
    pyepics == 3.5.2
    ispyb == 10.0.0
    nexgen == 0.9.3
    #
    # These dependencies may be issued as pre-release versions and should have a pin constraint
    # as by default pip-install will not upgrade to a pre-release.
    # 
    ophyd == 1.9.0
    ophyd-async == 0.3a4
    bluesky == 1.13.0a3
    blueapi == 0.4.3a3
    dls-dodal == 1.24.0

[options.entry_points]
console_scripts =
    hyperion = hyperion.__main__:main
    hyperion-callbacks = hyperion.external_interaction.callbacks.__main__:main

[options.extras_require]
dev =
    GitPython
    black
    pytest-cov
    pytest-random-order
    pytest-asyncio
    ipython
    mockito
    pre-commit
    mypy
    matplotlib
    tox
    build
    ruff
    diff-cover
    pyright
    pyright_diff_quality_plugin @ git+https://github.com/DiamondLightSource/pyright_diff_quality_plugin.git


[options.packages.find]
where = src

[options.package_data]
hyperion = *.txt

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True
#needed for opentelemetry
namespace_packages = true
[mypy-opentelemetry.sdk.*]
implicit_reexport = True
