[metadata]
name = hyperion
description = Unattended MX data collection using BlueSky / Ophyd
url = https://github.com/DiamondLightSource/hyperion
license = BSD 3-Clause License
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.11
packages = find:
package_dir =
    =src
install_requires =
    #
    # If a constraint is not set here or if the dependency is pinned to a hash
    # it will be auto-pinned to the latest release version by the pre-release workflow   
    #
    flask-restful
    opentelemetry-distro
    opentelemetry-exporter-jaeger
    semver
    # For databroker
    humanize
    pandas
    xarray
    doct
    databroker
    pydantic<2.0 # See https://github.com/DiamondLightSource/hyperion/issues/774
    scipy
    pyzmq
    scanspec
    numpy
    pyepics
    ispyb
    nexgen    
    #
    # These dependencies may be issued as pre-release versions and should have a pin constraint
    # as by default pip-install will not upgrade to a pre-release.
    # 
    ophyd == 1.9.0
    ophyd-async >= 0.3a5
    bluesky >= 1.13.0a3
    blueapi >= 0.4.3-a1
    dls-dodal @ git+https://github.com/DiamondLightSource/dodal.git@4f1376592e8e2a155b903147e869efe82c3b8288

[options.entry_points]
console_scripts =
    hyperion = hyperion.__main__:main
    hyperion-callbacks = hyperion.external_interaction.callbacks.__main__:main
    hyperion-generate-test-nexus = hyperion.utils.validation:generate_test_nexus
    hyperion-populate-test-and-meta-files = hyperion.utils.validation:copy_test_meta_data_files


[options.extras_require]
dev =
    ophyd-async
    GitPython
    black
    pytest-cov
    pytest-random-order
    pytest-asyncio
    ipython
    mockito
    pre-commit
    mypy
    matplotlib
    tox
    build
    ruff
    diff-cover
    pyright
    pyright_diff_quality_plugin @ git+https://github.com/DiamondLightSource/pyright_diff_quality_plugin.git


[options.packages.find]
where = src

[options.package_data]
hyperion = *.txt

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True
#needed for opentelemetry
namespace_packages = true
[mypy-opentelemetry.sdk.*]
implicit_reexport = True
